# advent-of-code-2022

./: .flake8  .gitignore  LICENSE  README.md  create_day_folder.py  main.py  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: readme-start.yml
docs/: _config.yml  index.md
docs/days/: day1.md  day10.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md
src/advent_of_code_2022/: console.py
src/advent_of_code_2022/days/day01/: README.md  solution.py
src/advent_of_code_2022/days/day02/: README.md  solution.py
src/advent_of_code_2022/days/day03/: README.md  solution.py
src/advent_of_code_2022/days/day04/: README.md  solution.py
src/advent_of_code_2022/days/day05/: README.md  solution.py
src/advent_of_code_2022/days/day06/: README.md  solution.py
src/advent_of_code_2022/days/day07/: README.md  solution.py
src/advent_of_code_2022/days/day08/: README.md  solution.py
src/advent_of_code_2022/days/day09/: README.md  solution.py
src/advent_of_code_2022/days/day10/: README.md  solution.py
src/advent_of_code_2022/days/day11/: solution.py
src/advent_of_code_2022/days/day12/: solution.py
src/advent_of_code_2022/utils/: __init__.py  template.md
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day21.py
utils/: __init__.py
(+12 files in other folders)
