[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "My solutions for the Advent of Code 2022 in Python using modern tooling"
authors = ["Geert Litjens <geert.litjens@radboudumc.nl>"]
readme = "README.md"
license = "MIT"
homepage = "https://geertlitjens.nl/advent-of-code-2022"
repository = "https://github.com/GeertLitjens/advent-of-code-2022"
keywords = ["advent of code"]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.1"
colorama = "^0.4.6"
numpy = "^1.23.5"

[tool.poetry.scripts]
advent-of-code-2022 = "advent_of_code_2022.console:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
